# pucho

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  dockerfile  main.py  pyproject.toml  render.yaml  simulation_transcript.txt  vercel.json
.claude/agents/: senior-ai-engineer.md
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_messages_table.py  0003_create_user_memories_table.py  0004_add_role_columns_to_users.py  0005_create_volunteer_expert_tables.py  0006_create_qa_reviews_table.py  0007_create_documents_table.py  001_create_user_tables.py  002_create_messages_table.py  003_create_users_memories_table.py  004_create_experts_and_volunteers_tables.py  005_create_qa_reviews_table.py  006_create_documents_table.py
api/: main.py
config/: __init__.py  db.py  settings.py
crud/: __init__.py  dashboard_user.py  document.py  expert.py  memory.py  message.py  qa_review.py  user.py  volunteer.py  whatsapp_user.py
models/: __init__.py  dashboard_user.py  document.py  enums.py  expert.py  memory.py  message.py  qa_review.py  user.py  volunteer.py  whatsapp_user.py
rag_corpus/financial /: engg_scholarship.md  ews_scholarship.md  humanities_scholarship.md  law_scholarship.md  mbbs_Scholarship.md  mbbs_private.md  private_scholarship.md  scholarship_1.md  scholarship_2.md  scholarship_3.md
rag_corpus/healthcare/: disabilities.md  neurodivergent_1.md  neurodivergent_2.md  ngos_for_autism.md  niramaya.md  uuid_card.md
scripts/: personas.py  seed_documents.py  seed_reviewers.py  simulate.py
(+46 files in other folders)
