[project]
name = "pucho"
version = "0.1.0"
description = "WhatsApp chatbot with multi-domain LangGraph agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=2.0.18",
    "llm-guard>=0.3.16",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.20",
    "sarvamai>=0.1.28",
    "sqlmodel>=0.0.39",
    "streamlit>=1.39.0",
    "streamlit-authenticator>=0.3.3",
    "supabase>=2.31.0",
    "twilio>=9.10.9",
    "uvicorn[standard]>=0.32.0",
    "vercel-blob>=0.2.0",
]

[tool.uv]
package = false
